--- a/static/hallo-custom.css
+++ b/static/hallo-custom.css
@@ -1,8 +1,3 @@
-html, body {
-    height: 100%;
-}
-
-/* hallo config */
 div.hallotoolbar {
     position: fixed;
     top: 0px;
@@ -15,48 +10,6 @@ div.hallotoolbar {
     border-radius: 6px;
     font-size: 12pt;
     line-height: 1.1em;
-}
-#preview h1, h2 {
-    font-family: "Georgia", serif;
-    font-variant: small-caps;
-    margin-bottom: 0px;
-    padding-bottom: 0.5em;
-}
-#preview h1 {
-    font-size: 20pt;
-}
-#preview h2 {
-    font-size: 16pt;
-}
-#preview ul {
-    margin-top: 0px;
-    margin-bottom: 0.5em;
-}
-#preview li {
-    font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
-    font-size: 16pt;
-    line-height: 17pt;
-}
-#preview p {
-    margin-top: 0px;
-    margin-bottom: 0.5em;
-    /* text-indent: 2em; */
-    font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, FreeSerif, serif;
-    font-size: 12pt;
-    line-height: 17pt;
-}
-#preview .download {
-    text-align: center;
-    margin: 1em;
-}
-#preview .download a {
-    margin-left: 1em;
-    margin-right: 1em;
-}
-[contenteditable="true"].inEditMode {
-    outline-style: auto;
-    outline-width: 3px;
-    outline-color: #111111;
 }
 /* ANNOTATIONS */
 .inEditMode .entity, .inEditMode a[typeof][about] {
@@ -75,14 +28,14 @@ div.hallotoolbar {
 .inEditMode .entity.organisation, .inEditMode a[typeof][about].organisation {
     border-color: #8f5902;
 }
-a {
-    color: #000000;
-    text-decoration: none;
-    font-weight: bold;
+[contenteditable="true"].inEditMode {
+    outline-style: auto;
+    outline-width: 3px;
+    outline-color: #111111;
 }
 div.hallotoolbar .dropdown-menu {
     width: "200px";
-    background-color: #eeeeec;
+    background-color: rgba(255,255,255,0.5);
     margin-top: -1px;
     border-left: 1px solid #babdb6;
     border-bottom: 1px solid #babdb6;
@@ -93,4 +46,3 @@ div.hallotoolbar .dropdown-menu {
 div.hallotoolbar .dropdown-menu .selected {
     background-color: #729fcf;
 }
-/* /hallo */
