--- a/static/yace.css
+++ b/static/yace.css
@@ -4,9 +4,14 @@ html, body {
 
 body {
     overflow: hidden;
+    background: none repeat scroll 0 0 #000000;
 }
 footer {
+    text-align: right;
+    width: 100%;
+    position: fixed;
     height:30px;
+    bottom:0px;
 }
 footer a:visited,
 footer a:active,
@@ -41,7 +46,7 @@ a.dropdown-selected:hover {
     margin: 0;
     position: fixed;
     width: 50%;
-    height: 100%;
+    /* height: 100%; */
     overflow: auto;
     display: block;
     line-height: 1.5em;
@@ -58,7 +63,7 @@ a.dropdown-selected:hover {
     right: 0;
     top: 40px;
     bottom: 30px;
-    height: 100%;
+    /* height: 100%; */
     width: 50%;
 }
 #overlay {
